# Cpp-Regression

./: CMakeLists.txt  README.md  exponential.txt  linear.txt  regression.cpp  regression.hpp
